--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -185,5 +185,93 @@
         "desc": "نخضع التطبيق لاختبارات دقيقة لضمان خلوه من الأخطاء، ثم نطلقه رسميًا مع تقديم دعم مستمر وتحديثات مستقبلية."
       }
     }
+  },
+  "webApp": {
+    "hero": {
+      "title": " جيني تك",
+      "suTitle": "واجهتك الرقمية نحو النجاح",
+      "desc": "موقعك الإلكتروني هو أكثر من مجرد صفحات على الإنترنت، إنه بوابتك للوصول إلى جمهورك، عرض خدماتك، وتحقيق نمو مستدام. مع حلولنا المتكاملة، نضمن لك موقعًا احترافيًا يجمع بين الجاذبية البصرية، الأداء السريع، والتجربة السلسة للمستخدم.",
+      "btn-1": "إكتشف المزيد",
+      "btn-2": "ابدأ الآن"
+    },
+    "why": {
+      "title": "لماذا تحتاج إلى موقع إلكتروني؟",
+      "desc": "في عالم اليوم، أصبح التواجد الرقمي ضرورة لا غنى عنها لأي نشاط تجاري أو شخصي. موقعك الإلكتروني هو واجهتك الرقمية التي تضعك في مقدمة المنافسة، حيث يمنحك القدرة على التواصل مع جمهورك المستهدف بسهولة، وتعزيز علامتك التجارية، وتحقيق أهدافك بفعالية. سواء كنت تقدم خدمات، تبيع منتجات، أو ترغب في مشاركة محتوى قيّم، فإن امتلاك موقع إلكتروني يمنحك حضورًا قويًا واحترافيًا على الإنترنت.",
+      "box-1": "الحضور الرقمي القوي",
+      "box-2": "الوصول إلى جمهور أوسع",
+      "box-3": "إدارة أعمالك بكفاءة",
+      "box-4": "رفع معدلات المبيعات والأرباح"
+    },
+    "Features": {
+      "title": "مميزات تطوير المواقع معنا",
+      "desc1": " تصميم احترافي ومتجاوب – نقدم مواقع إلكترونية بتصميم عصري وجذاب، متوافقة مع جميع الأجهزة لضمان تجربة مستخدم سلسة وسهلة التصفح، مما يعزز من تفاعل الزوار ويعكس احترافية علامتك التجارية. كما نهتم بأدق التفاصيل لضمان موقع يعكس هويتك الفريدة.",
+      "desc2": "أداء فائق وسرعة تحميل مثالية – نضمن لك مواقع إلكترونية سريعة الاستجابة بفضل استخدام أحدث التقنيات وأفضل ممارسات تحسين الأداء. نعتمد على أكواد نظيفة وتقنيات متطورة لضمان تجربة تصفح سلسة، مما يعزز رضا الزوار ويحسن ترتيب موقعك في نتائج البحث.",
+      "desc3": "أمان وحماية متقدمة – نحرص على تأمين موقعك من الهجمات الإلكترونية عبر بروتوكولات حماية قوية وتحديثات مستمرة. نطبق أحدث معايير الأمان، بما في ذلك تشفير البيانات وحماية السيرفرات، لضمان تجربة آمنة وموثوقة لزوارك."
+    },
+
+    "steps": {
+      "title": "مراحل تطوير موقعك معنا",
+      "desc": "من اللحظة التي تشاركنا فيها فكرتك، نعمل بخطوات دقيقة ومنهجية لضمان الحصول على تطبيق احترافي بأفضل أداء. إليك كيف نحول فكرتك إلى حقيقة:",
+      "step-1": {
+        "title": "1. تحليل الفكرة والتخطيط",
+        "desc": "نبدأ بفهم احتياجاتك وأهداف مشروعك لتحديد أفضل استراتيجية لإنشاء موقع إلكتروني يعكس هويتك وأهدافك."
+      },
+      "step-2": {
+        "title": "2. التصميم والتجربة (UI/UX)",
+        "desc": "انحول فكرتك إلى تصميم احترافي يجذب الزوار ويوفر تجربة استخدام مريحة وسهلة."
+      },
+      "step-3": {
+        "title": "3. التطوير والبرمجة",
+        "desc": "نقوم بتحويل التصميم إلى موقع تفاعلي بأحدث التقنيات، مع تحسين الأداء وضمان سرعة التصفح."
+      },
+      "step-4": {
+        "title": "4. الاختبار والإطلاق",
+        "desc": "نختبر الموقع على مختلف الأجهزة والمتصفحات لضمان تجربة خالية من الأخطاء قبل الإطلاق الرسمي."
+      }
+    }
+  },
+  "deskApp": {
+    "hero": {
+      "title": " جيني تك",
+      "suTitle": "تطوير تطبيقات سطح المكتب حلول برمجية متكاملة",
+      "desc": "نقدم حلولًا متكاملة لتطوير تطبيقات سطح المكتب المصممة خصيصًا لتلبية احتياجات الشركات والأفراد، مما يضمن أداءً عاليًا، تجربة مستخدم سلسة، وتوافقًا مع مختلف أنظمة التشغيل. سواء كنت بحاجة إلى تطبيق لإدارة بيانات العملاء، التحكم في العمليات الداخلية، أو أتمتة مهامك اليومية، فإننا نوفر لك الحل الأمثل بأحدث التقنيات.",
+      "btn-1": "إكتشف المزيد",
+      "btn-2": "ابدأ الآن"
+    },
+    "why": {
+      "title": " ما تقدمه لك برامج  سطح مكتب خاصتنا",
+      "desc": "يمنحك تطبيق سطح المكتب أداءً قويًا ومستقرًا مع أمان متقدم، مما يجعله الحل الأمثل لإدارة أعمالك بكفاءة عالية دون الحاجة إلى اتصال دائم بالإنترنت.",
+      "box-1": "أداء سريع ومستقر",
+      "box-2": "أمان متقدم حماية قوية للبيانات",
+      "box-3": "تكامل سلس إمكانية الربط مع قواعد البيانات",
+      "box-4": " إنتاجية أعلى تقليل الأخطاء"
+    },
+    "Features": {
+      "title": "مميزات تطوير تطبيقات سطح المكتب معنا",
+      "desc1": "نعتمد على أحدث التقنيات لضمان سرعة وكفاءة عالية، مع دعم التشغيل على أنظمة Windows, macOS, وLinux، بالإضافة إلى التكامل مع قواعد البيانات مثل PostgreSQL, MySQL, MongoDB وربط الأجهزة المختلفة مثل الطابعات والماسحات الضوئية وأجهزة الدفع.",
+      "desc2": "تصميم احترافي وتجربة مستخدم متطورة – نحرص على تقديم تطبيقات سطح مكتب بواجهة مستخدم أنيقة وسهلة الاستخدام، مع تجربة سلسة تلبي احتياجاتك وتوفر أعلى مستويات الكفاءة والإنتاجية. نركز على التفاعل السلس والأداء المستقر لضمان تجربة استخدام مريحة.",
+      "desc3": "مان وموثوقية عالية – نعتمد على أحدث معايير الأمان لحماية بياناتك من الاختراقات والمخاطر السيبرانية. يتم تطبيق تقنيات التشفير المتقدمة، وإجراءات الحماية الصارمة، مع تحديثات مستمرة لضمان أداء آمن ومستقر على المدى الطويل."
+    },
+
+    "steps": {
+      "title": "مراحل تطوير تطبيق سطح المكتب معنا",
+      "desc": "نحرص على تنفيذ مشروعك وفق منهجية واضحة تضمن تحقيق أفضل النتائج، بدءًا من الفكرة وصولًا إلى التطبيق النهائي. إليك المراحل الرئيسية للعمل معنا:",
+      "step-1": {
+        "title": "1. تحليل الفكرة والتخطيط",
+        "desc": "تحليل سلوك المستخدمين ، تحديد المزايا الأساسية والوظائف المطلوبة للتطبيق ، وضع خارطة طريق واضحة للمشروع وتحديد الجدول الزمني."
+      },
+      "step-2": {
+        "title": "2. التصميم والتجربة (UI/UX)",
+        "desc": "تصميم واجهة مستخدم حديثة ومتجاوبة توفر تجربة استخدام سلسة ، مع تحسين تجربة المستخدم من خلال دراسة التفاعل وسهولة الاستخدام."
+      },
+      "step-3": {
+        "title": "3. التطوير والبرمجة",
+        "desc": "نطور التطبيق بتقنيات حديثة، مع تكامل قوي مع قواعد البيانات والأجهزة الخارجية، ونضمن الأمان عبر المصادقة الثنائية وتشفير البيانات."
+      },
+      "step-4": {
+        "title": "4. الاختبار والإطلاق",
+        "desc": "نختبر التطبيق لضمان الأداء والأمان والتوافق مع مختلف الأنظمة، مع تقديم نسخة تجريبية للمراجعة والتعديلات. بعد الإطلاق، نوفر دعمًا فنيًا مستمرًا وتحديثات دورية لضمان استقرار التطبيق وإضافة ميزات جديدة وفقًا لاحتياجاتك."
+      }
+    }
   }
 }
