--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -14,6 +14,12 @@
     "contact": "الإتصال",
     "btn": "إستشر الأن "
   },
+  "linkService": {
+    "deskapp": "برامج سطح المكتب",
+    "mobileapp": "تطبيقات الهاتف",
+    "webapp": "تطبيقات الويب",
+    "design": "تصميم الواجهات"
+  },
   "Statistic": {
     "box-1": {
       "nub": "+ 10",
@@ -271,6 +277,50 @@
       "step-4": {
         "title": "4. الاختبار والإطلاق",
         "desc": "نختبر التطبيق لضمان الأداء والأمان والتوافق مع مختلف الأنظمة، مع تقديم نسخة تجريبية للمراجعة والتعديلات. بعد الإطلاق، نوفر دعمًا فنيًا مستمرًا وتحديثات دورية لضمان استقرار التطبيق وإضافة ميزات جديدة وفقًا لاحتياجاتك."
+      }
+    }
+  },
+  "design": {
+    "hero": {
+      "title": " جيني تك",
+      "suTitle": " تصميم الشعارات والهويات البصرية  UI/UX",
+      "desc": "الهوية البصرية هي الانطباع الأول لعلامتك التجارية، فهي تعكس قيمك، وتجعلك مميزًا بين المنافسين، وتعزز ثقة عملائك. من خلال تصميم احترافي، تضمن بناء صورة قوية وموثوقة لعلامتك التجارية.",
+      "btn-1": "إكتشف المزيد",
+      "btn-2": "ابدأ الآن"
+    },
+    "why": {
+      "title": " مميزات خدمة تصميم الشعارات والهويات البصرية معنا",
+      "desc": "نقدم لك تصميم شعارات وهويات بصرية إبداعية تعكس جوهر علامتك التجارية بأسلوب احترافي وجذاب، مع تناسق متكامل في الألوان، الخطوط، والرموز لضمان هوية قوية يسهل تذكرها. نوفر ملفات متعددة الاستخدام بصيغ مختلفة تناسب الطباعة، المواقع، والسوشيال ميديا، بالإضافة إلى مرونة في التعديلات لضمان تحقيق رؤيتك الكاملة في التصميم.",
+      "box-1": "تصميم إبداعي فريد",
+      "box-2": "ملفات متعددة الاستخدام",
+      "box-3": "تناسق بصري متكامل",
+      "box-4": "مرونة في التعديلات"
+    },
+    "Features": {
+      "title": "مميزات خدمة تصميم الشعارات والهويات البصرية (UI/UX) معنا",
+      "desc1": "نقدم تصاميم شعارات وهويات بصرية فريدة تعكس جوهر علامتك التجارية بأسلوب احترافي وجذاب، مع تناسق مثالي في الألوان، الخطوط، والرموز لضمان هوية قوية يسهل تذكرها. نوفر ملفات متعددة الاستخدام تناسب الطباعة، المواقع، والسوشيال ميديا، مع إمكانية إجراء تعديلات مخصصة لتحقيق رؤيتك الكاملة.",
+      "desc2": "تصاميم مبتكرة تعزز تميزك – نعتمد على الإبداع والبحث العميق لفهم علامتك التجارية وتصميم هوية بصرية تعكس رؤيتها وقيمها. نركز على التفاصيل لضمان شعار فريد يعزز حضورك في السوق ويترك انطباعًا قويًا لدى جمهورك المستهدف.",
+      "desc3": "تجربة مستخدم متكاملة وسهلة التفاعل – نقدم تصاميم UI/UX احترافية تركز على تجربة المستخدم، مع تخطيط مدروس وسهل الاستخدام لضمان تفاعل سلس ومريح مع موقعك أو تطبيقك. نهتم بإنشاء واجهات بصرية جذابة، متناسقة، ومتوافقة مع أحدث معايير التصميم لضمان رضا المستخدمين وزيادة التفاعل."
+    },
+
+    "steps": {
+      "title": "ماذا تشمل هويتك البصرية؟",
+      "desc": "تمثل هويتك البصرية الركيزة الأساسية لعلامتك التجارية، حيث تجمع بين التصميم المميز والاتساق البصري لضمان تميزك عن المنافسين. تشمل جميع العناصر التي تجعل علامتك التجارية أكثر وضوحًا وجاذبية، مما يساعدك على بناء صورة احترافية ومتناسقة عبر مختلف الوسائط الرقمية والمطبوعة.",
+      "step-1": {
+        "title": "1. شعار احترافي",
+        "desc": "نصمم شعارًا يعكس جوهر علامتك التجارية ويعبر عن رؤيتها بطريقة مبتكرة، مع مراعاة البساطة والأناقة لضمان تذكره بسهولة. نحرص على أن يكون الشعار متعدد الاستخدامات ليتناسب مع جميع المنصات الرقمية والمطبوعة."
+      },
+      "step-2": {
+        "title": "2. ألوان وخطوط مميزة",
+        "desc": "نختار لوحة ألوان متناسقة وخطوط تعكس شخصية علامتك التجارية، مما يسهم في إنشاء هوية بصرية متماسكة. يساعد ذلك في تعزيز التعرف على العلامة التجارية بسهولة عند استخدامها في الإعلانات، المواقع الإلكترونية، ووسائل التواصل الاجتماعي."
+      },
+      "step-3": {
+        "title": "3. تصاميم المطبوعات",
+        "desc": "تصميم بطاقات أعمال، أوراق رسمية، أظرف، ونماذج فواتير بمظهر احترافي يعزز من مصداقية العلامة التجارية. يتم تصميم كل عنصر بعناية لضمان التناسق مع باقي الهوية البصرية وإبراز طابعها الفريد."
+      },
+      "step-4": {
+        "title": "4. تصاميم رقمية",
+        "desc": "نوفر تصاميم متكاملة ومتوافقة مع مختلف المنصات الرقمية، بما في ذلك قوالب جاهزة لمنشورات السوشيال ميديا، صور الغلاف، وإعلانات رقمية جذابة. يساعد ذلك في الحفاظ على هوية بصرية موحدة تعكس احترافية علامتك التجارية وتجذب العملاء."
       }
     }
   }
