--- a/public/locale/fr/translation.json
+++ b/public/locale/fr/translation.json
@@ -18,6 +18,12 @@
     "contact": "Contact",
     "btn": "Order Now"
   },
+  "linkService": {
+    "deskapp": "Desktop Applications",
+    "mobileapp": "Mobile Applications",
+    "webapp": "Web Applications",
+    "design": "UI/UX Design"
+  },
   "Statistic": {
     "box-1": {
       "nub": "+10",
@@ -225,7 +231,6 @@
       }
     }
   },
-
   "deskApp": {
     "hero": {
       "title": "Genie Tech",
@@ -266,6 +271,49 @@
       "step-4": {
         "title": "4. Testing & Deployment",
         "desc": "Conducting thorough testing to ensure performance, security, and cross-platform compatibility, followed by a trial version for review and adjustments. Post-launch, we provide ongoing technical support and regular updates to maintain stability and introduce new features as needed."
+      }
+    }
+  },
+  "design": {
+    "hero": {
+      "title": "Genie Tech",
+      "suTitle": "Logo & Visual Identity | UI/UX Design",
+      "desc": "Your brand’s visual identity is its first impression—reflecting its values, setting it apart from competitors, and building customer trust. A professional design ensures a strong and reliable brand image.",
+      "btn-1": "Learn More",
+      "btn-2": "Get Started"
+    },
+    "why": {
+      "title": "Why Choose Our Logo & Visual Identity Design Service?",
+      "desc": "We create innovative and professional logo and visual identity designs that capture your brand’s essence with harmonious colors, fonts, and symbols for a strong and memorable identity. Our service includes versatile file formats suitable for print, websites, and social media, with flexible revisions to bring your vision to life.",
+      "box-1": "Unique & Creative Design",
+      "box-2": "Multi-Use File Formats",
+      "box-3": "Consistent Visual Harmony",
+      "box-4": "Flexible Revisions"
+    },
+    "Features": {
+      "title": "Key Features of Our Logo & UI/UX Design Service",
+      "desc1": "We craft distinctive and professional logo and visual identity designs that perfectly reflect your brand’s essence, ensuring color, font, and symbol consistency for a strong, recognizable presence. Our designs come in multiple formats for print, digital, and social media use, with tailored revisions to match your vision.",
+      "desc2": "Innovative & Standout Branding – We blend creativity with in-depth research to understand your brand and develop a visual identity that embodies its vision and values. Every detail is meticulously crafted to ensure a unique logo that strengthens your market presence and leaves a lasting impact.",
+      "desc3": "Seamless & Engaging User Experience – Our professional UI/UX designs prioritize user-friendly interaction, featuring intuitive layouts that enhance website and app usability. We focus on visually appealing, consistent, and modern interfaces that align with the latest design standards, ensuring higher engagement and satisfaction."
+    },
+    "steps": {
+      "title": "What Does Your Visual Identity Include?",
+      "desc": "Your visual identity forms the foundation of your brand, combining distinctive design elements with visual consistency to differentiate you from competitors. It encompasses all key components that enhance brand recognition and professionalism across digital and print media.",
+      "step-1": {
+        "title": "1. Professional Logo",
+        "desc": "We design a logo that captures your brand’s essence in a simple yet elegant way, ensuring easy recognition. Our logos are versatile and adaptable for all digital and print platforms."
+      },
+      "step-2": {
+        "title": "2. Unique Colors & Typography",
+        "desc": "We select a cohesive color palette and fonts that reflect your brand’s personality, reinforcing a consistent visual identity. This enhances brand recognition across ads, websites, and social media."
+      },
+      "step-3": {
+        "title": "3. Print Design Elements",
+        "desc": "We create professional business cards, letterheads, envelopes, and invoice templates that enhance your brand’s credibility. Each element is thoughtfully designed to maintain visual consistency and a distinct brand identity."
+      },
+      "step-4": {
+        "title": "4. Digital Design Assets",
+        "desc": "We provide fully integrated digital designs, including ready-made social media templates, cover images, and eye-catching digital ads. This ensures a cohesive and professional brand presence across all digital platforms."
       }
     }
   }
