--- a/public/locale/ar/translation.json
+++ b/public/locale/ar/translation.json
@@ -91,7 +91,9 @@
     "title": "منتجاتنا الرقمية ",
     "title2": "حلول مبتكرة في متناول يدك",
     "desc": "اكتشف مجموعتنا الحصرية من المنتجات الرقمية المصممة لتسهيل أعمالك وتعزيز حضورك الرقمي. حلول متكاملة بأعلى معايير الجودة، جاهزة للاستخدام فورًا!",
-    "btn": "إقرأ  المزيد"
+    "btn": "إقرأ  المزيد",
+    "detail": "تفاصيل المنتج",
+    "ourWork": "من أعمالنا "
   },
   "profil": {
     "title": "اكتشف كيف ساعدت",
@@ -323,5 +325,12 @@
         "desc": "نوفر تصاميم متكاملة ومتوافقة مع مختلف المنصات الرقمية، بما في ذلك قوالب جاهزة لمنشورات السوشيال ميديا، صور الغلاف، وإعلانات رقمية جذابة. يساعد ذلك في الحفاظ على هوية بصرية موحدة تعكس احترافية علامتك التجارية وتجذب العملاء."
       }
     }
+  },
+  "blog": {
+    "title": "مدونتنا الرقمية",
+    "suTitle": "نافذتك إلى عالم التكنولوجيا",
+    "desc": "مرحبًا بك في مدونتنا، حيث نواكب أحدث التطورات في عالم التكنولوجيا، التصميم، والتطوير! نقدم لك محتوى غنيًا بالمعلومات، التحليلات، والنصائح لمساعدتك في تعزيز حضورك الرقمي وتحقيق أقصى استفادة من الحلول التقنية الحديثة. تابعنا لتكون دائمًا في الطليعة!",
+    "title2": "كل المدونات ",
+    "titleInTheBlog": "ماذا تقرأ بعد ذلك"
   }
 }
